task-12: method for finding a list of students who was absent at specific date was updated